# Pgtcl

./: .gitignore  .travis.yml  ChangeLog  KNOTES  LICENSE  Makefile  Makefile.in  README  README-postgres-helpers.md  README.FreeBSD  README.Linux  README.async  README.freebsd  README.macosx  README.md  TODO  aclocal.m4  configure  configure.in  index.html  params.json  pgtcl.c  pgtclCmds.c  pgtclId.c  pkgIndex.tcl.in  postgres-helpers.tcl
.github/workflows/: linux-ci.yml  mac-ci.yml
doc/: Dockerfile  HTML.index  Makefile  NEW-COMMANDS  PGTCL-NOTES  README  clean-html.sh  clean-man.sh  dtd-patch.txt  fix-fi.sh  libpgtcl.sgml  stylesheet.dsl
doc/html/: HTML.index  index.html  libpgtcl-loading.html  libpgtcl-ref.html  libpgtcl.html  pgtcl-commandhandles.html  pgtcl-examplesect.html  pgtcl-nullvaluestring.html  pgtcl-pgblocking.html  pgtcl-pgcancelrequest.html  pgtcl-pgconndefaults.html  pgtcl-pgconnect.html  pgtcl-pgconninfo.html  pgtcl-pgcopycomplete.html  pgtcl-pgdisconnect.html  pgtcl-pgescape-bytea.html  pgtcl-pgescape-string.html  pgtcl-pgexec.html  pgtcl-pgexecprepared.html  pgtcl-pgexecute.html  pgtcl-pggetconnectionid.html  pgtcl-pggetresult.html  pgtcl-pgisbusy.html  pgtcl-pglisten.html  pgtcl-pgloclose.html  pgtcl-pglocreat.html  pgtcl-pgloexport.html  pgtcl-pgloimport.html  pgtcl-pglolseek.html  pgtcl-pgloopen.html  pgtcl-pgloread.html  pgtcl-pglotell.html  pgtcl-pglounlink.html  pgtcl-pglowrite.html  pgtcl-pgon-connection-loss.html  pgtcl-pgresult.html  pgtcl-pgresults.html  pgtcl-pgselect.html  pgtcl-pgsendquery.html  pgtcl-pgsendqueryprepared.html  (+6 more)
doc/man/: PgGetConnectionId.n  pg_blocking.n  pg_cancelrequest.n  pg_conndefaults.n  pg_connect.n  pg_copy_complete.n  pg_dbinfo.n  pg_disconnect.n  pg_escape_bytea.n  pg_escape_string.n  pg_exec.n  pg_exec_prepared.n  pg_execute.n  pg_getresult.n  pg_isbusy.n  pg_listen.n  pg_lo_close.n  pg_lo_creat.n  pg_lo_export.n  pg_lo_import.n  pg_lo_lseek.n  pg_lo_open.n  pg_lo_read.n  pg_lo_tell.n  pg_lo_truncate.n  pg_lo_unlink.n  pg_lo_write.n  pg_null_value_string.n  pg_on_connection_loss.n  pg_quote.n  pg_result.n  pg_select.n  pg_sendquery.n  pg_sendquery_prepared.n  pg_sqlite.n  pg_unescape_bytea.n
generic/: libpgtcl.h  pgtcl.c  pgtclAppInit.c  pgtclCmds.c  pgtclCmds.h  pgtclId.c  pgtclId.h  pgtclSqlite.c  pgtclSqlite.h  tokenize.c  tokenize.h
html/: HTML.index  index.html  libpgtcl-loading.html  libpgtcl-ref.html  libpgtcl.html  pgtcl-commandhandles.html  pgtcl-examplesect.html  pgtcl-nullvaluestring.html  pgtcl-pgblocking.html  pgtcl-pgcancelrequest.html  pgtcl-pgconndefaults.html  pgtcl-pgconnect.html  pgtcl-pgconninfo.html  pgtcl-pgdisconnect.html  pgtcl-pgescape-bytea.html  pgtcl-pgescape-string.html  pgtcl-pgexec.html  pgtcl-pgexecprepared.html  pgtcl-pgexecute.html  pgtcl-pggetconnectionid.html  pgtcl-pggetresult.html  pgtcl-pgisbusy.html  pgtcl-pglisten.html  pgtcl-pgloclose.html  pgtcl-pglocreat.html  pgtcl-pgloexport.html  pgtcl-pgloimport.html  pgtcl-pglolseek.html  pgtcl-pgloopen.html  pgtcl-pgloread.html  pgtcl-pglotell.html  pgtcl-pglounlink.html  pgtcl-pglowrite.html  pgtcl-pgon-connection-loss.html  pgtcl-pgresult.html  pgtcl-pgselect.html  pgtcl-pgsendquery.html  pgtcl-pgsendqueryprepared.html  pgtcl-pgsqlite.html  pgtcl-pgtruncate.html  (+3 more)
playpen/: README
playpen/datatypes/: README  demo.tcl  install-types.tcl
playpen/dbobjects/: README  dbtable.tcl  demo.tcl  gen_db_objects.tcl
playpen/pggrok/: README  compare.tcl  demo.tcl  dump.tcl  pggrok.tcl
playpen/pghelpers/: Makefile  postgres-helpers.README  postgres-helpers.tcl
runtime/: pgtcl.tcl
tclconfig/: ChangeLog  tcl.m4
tests/: README  all.tcl  conninfo.tcl  create.sql  import_sampledata.tcl  import_sampledata_connobj.tcl  import_sampledata_onetransaction.tcl  import_sampledata_prepared.tcl  import_sampledata_prepared_onetransaction.tcl  pgtcl-bulk.test  pgtcl.test  sampledata.txt  sqlite3.test
win/: libpgtcl.dsp  libpgtcl.dsw  makefile.vc
